--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -153,7 +153,7 @@ nav span {
 
 .meal-banner {
   height: 18rem;
-  background-image: url("../images/meal_3.JPG");
+  background-image: url('../images/meal_3.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
